--- a/src/lobby.scss
+++ b/src/lobby.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: column;
 
-  .pack {
+  .packs {
   }
 
   .lobby-list {
@@ -24,6 +24,26 @@
 
   .app {
     flex: 3;
+  }
+}
+
+.packs {
+  display: flex;
+  flex-flow: row wrap;
+  .pack {
+    color: $lightblue;
+    user-select: none;
+    cursor: pointer;
+    flex: 0 0 40%;
+    padding: 0.4em;
+
+    & .selected {
+      border-bottom: 2px solid $orange;
+    }
+
+    .color {
+      text-transform: capitalize;
+    }
   }
 }
 
