--- a/src/predict.scss
+++ b/src/predict.scss
@@ -35,6 +35,9 @@
 
 
     .moves {
+      .move {
+        font-weight: normal;
+      }
       .base {
         color: #ccc;
         opacity: 0.6;
